test_translator/tests/data/checkpoint_1/core/pass/03_truthy_falsy/solution.ts
export function is_positive(n: number): boolean {
    return n > 0;
}
